Fix test
Signed-off-by: Mikhail Khludnev <mkhl@apache.org>